GNOME Bugzilla – Bug 681291
asfdemux: fix hanging issue because of invalid timestamp handling
Last modified: 2012-08-06 14:34:32 UTC
Created attachment 220432 [details] [review] handle the invalid timestamp handling The following commit in plugins-ugly http://cgit.freedesktop.org/gstreamer/gst-plugins-ugly/commit/?id=cde5a81aba2b04bab501c6788d1de568dd29025a is causing a regression in vc1 decoding ... test case to reproduce the issue: download and play locally the following VC1(advanced) video with gst-launch-1.0 http://samples.mplayerhq.hu/V-codecs/WVC1/FlightSimX_720p60_51_15Mbps.wmv The pipeline will hang.. Attaching a patch to fix this.
[0.10] commit afeffcdb44135c04c5767bba8b10fab82ec9a9df Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Mon Aug 6 15:31:50 2012 +0300 asfdemux: avoid some more invalid timestamp arithmetic Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681291 [0.11] commit f7a4318b5427e57887f9aea756575b9910a1cd16 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Mon Aug 6 15:31:50 2012 +0300 asfdemux: avoid some more invalid timestamp arithmetic Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681291
Thanks for the quick commit!