asfdemux: avoid some more invalid timestamp arithmetic

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681291